<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MitaxiRegistrerChofer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Registro manualmente -->
    <string name="mitaxiregisterchofer_name">Registro</string>
    <string name="mitaxiregisterchofer_error">Corrige los datos antes de avanzar.</string>
    <string name="mitaxiregisterchofer_error_string">Escribe cadena válida [a-z A-Z].</string>
    <string name="mitaxiregisterchofer_error_number">Escribe número válido [0 9].</string>
    <string name="mitaxiregisterchofer_error_email">Escribe sintaxis de correo válida.</string>
    <string name="mitaxiregisterchofer_empty">Los campos no pueden dejarse en blanco.</string>
    <string name="mitaxiregisterchofer_tv_title">Registro</string>
    <string name="mitaxiregisterchofer_et_name_hint">Nombre</string>
    <string name="mitaxiregisterchofer_et_appat_hint">Apellido paterno</string>
    <string name="mitaxiregisterchofer_et_apmat_hint">Apellido materno</string>
    <string name="mitaxiregisterchofer_et_teluser_hint">Teléfono</string>
    <string name="mitaxiregisterchofer_et_licencia_hint">Licencia</string>
    <string name="mitaxiregisterchofer_et_vigencia">Vigencia: </string>
    <string name="mitaxiregisterchofer_et_idiomas">Idiomas: </string>
    <string name="mitaxiregisterchofer_et_antiguedad">Antiguedad: </string>
    <string name="mitaxiregisterchofer_tv_foto">Fotografía: </string>
    <string name="mitaxiregisterchofer_btn_fecha">Agregar</string>
    <string name="mitaxiregisterchofer_et_paraque">¿Para qué?</string>
    <string name="mitaxiregisterchofer_btn_cancel">Cancelar</string>
    <string name="mitaxiregisterchofer_btn_ok">Registrar</string>

    <!-- Validations EditText -->
    <string name="edittext_emtpy">Llena todos los campos.</string>
    <string name="edittext_wrong_info">Corrige campos de texto incorrectos.</string>
    <string name="edittext_error_string">Escribe cadena válida [a-z A-Z].</string>
    <string name="edittext_error_number">Escribe número válido [0&#8211;9].</string>
    <string name="edittext_error_email">Escribe sintaxis de correo válida.</string>
    <string name="edittext_error_telephone_repeated">Teléfono de usuario y emergencia no debe ser el mismo</string>
    <string name="title_activity_idiomas_dialog">IdiomasDialogActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_inicio_de_trabajo">InicioDeTrabajo</string>
    <string name="transaction_wrong">Ops#8230; Ocurrió un error al hacer la conexión con el servidor.</string>

    <!-- tracking taximetro -->
    <string name="esperando">esperando...</string>
    <string name="arranacarServicio">Arrancar servicio</string>
    <string name="detenerServicio">Detener servicio</string>
    <string name="title_activity_viaje_posible">Viaje_posible</string>
    <string name="title_activity_mapa_origen_destino">MapaOrigenDestino</string>
    
     <!-- trip -->
    
      <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    
    <string name="content_description">Draw the route taxi-user</string>
    
    <!-- Taxi Driver Info -->
    <string name="custommitaxi_tv_drivertimedistance">A %1$s min. de tu posición aprox.</string>
    <string name="mitaxi_trip_tv_drivertype">%1$s</string>
    <string name="mitaxi_trip_tv_drivername">%1$s</string>
    <string name="mitaxi_trip_tv_driverid">Licencia: %1$s</string>
    <string name="mitaxi_trip_tv_driveridvalidity">Vigencia: %1$s</string>
    <string name="mitaxi_trip_tv_driverantiquity">Antigüedad %1$s</string>
    <string name="mitaxi_trip_tv_driverranking">Calificación: %1$s</string>
    <string name="mitaxi_trip_tv_drivertaxiid">Placas: %1$s</string>
    <string name="mitaxi_trip_tv_drivertaximodel">Auto: %1$s</string>
    <string name="mitaxi_trip_tv_drivernuminfraction">Infracciones: %1$s</string>
    <string name="mitaxi_trip_tv_wrongdriver">¿No es el chofer?</string>
    
    <string name="mitaxi_trip_btn_starttrip">Llegó mi taxi</string>
    
    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    

    
    <!-- Maps -->
    <string name="map_not_ready">Mapa no listo.</string>
    
    
     <!-- Connection Google Play Services -->
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>

</resources>
