<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable1"
    tools:context=".MitaxiRegisterManuallyActivity" >

    <TextView
        android:id="@+id/mitaxiregistermanually_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/mitaxiregisterchofer_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/generic_amarillo"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/mitaxiregistermanually_sv_container_infouser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mitaxiregistermanually_tv_label"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_background"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/mitaxiregistermanually_ll_container_infouser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infousername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregisterchofer_et_name_hint"
                android:inputType="textPersonName|textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" >
            </EditText>

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infouserappat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregisterchofer_et_appat_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infouserapmat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregisterchofer_et_apmat_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infousertel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregisterchofer_et_teluser_hint"
                android:inputType="phone"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infouserlicencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregisterchofer_et_licencia_hint"
                android:inputType="phone"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/mitaxiregisterchofer_et_antiguedad"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/mitaxiregistermanually_btn_antiguedad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@drawable/selector_btn_generic"
                    android:text="@string/mitaxiregisterchofer_btn_fecha"
                    android:textColor="@drawable/selector_txt_boton_redondo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/mitaxiregisterchofer_et_vigencia"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/mitaxiregistermanually_btn_vigencia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@drawable/selector_btn_generic"
                    android:text="@string/mitaxiregisterchofer_btn_fecha"
                    android:textColor="@drawable/selector_txt_boton_redondo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/mitaxiregisterchofer_tv_foto"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/mitaxiregistermanually_btn_foto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@drawable/selector_btn_generic"
                    android:text="@string/mitaxiregisterchofer_btn_fecha"
                    android:textColor="@drawable/selector_txt_boton_redondo" />
            </LinearLayout>
            
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/mitaxiregisterchofer_et_idiomas"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/mitaxiregistermanually_btn_idiomas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:background="@drawable/selector_btn_generic"
                    android:text="@string/mitaxiregisterchofer_btn_fecha"
                    android:textColor="@drawable/selector_txt_boton_redondo" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/mitaxiregistermanually_btn_paraque"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="right"
            android:text="@string/mitaxiregisterchofer_et_paraque"
            android:textColor="@color/generic_amarillo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/mitaxiregistermanually_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_generic"
                android:text="@string/mitaxiregisterchofer_btn_cancel"
                android:textColor="@drawable/selector_txt_boton_redondo"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mitaxiregistermanually_btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_btn_generic"
                android:text="@string/mitaxiregisterchofer_btn_ok"
                android:textColor="@drawable/selector_txt_boton_redondo"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>